2006-05-17  Gabor Csardi  <csardi@kzoo.edu>

	* src/games.c (igraph_recent_degree_game) : added

2006-05-16  Gabor Csardi  <csardi@kzoo.edu>

	* src/igraph_psumtree.c (igraph_psumtree_init, igraph_psumtree_destroy)
	(igraph_psumtree_update, igraph_psumtree_size, igraph_psumtree_sum) :
	added
	* examples/simple/igraph_psumtree.c : added

	* src/games.c (igraph_nonlinear_barabasi_game) : added
	
2006-05-15  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/structural_properties.c (igraph_subgraph) : small bugfix.
	  Fixes a NULL pointer reference in the Python interface.
	* interfaces/python/edgeobject.[ch],
	  interfaces/python/edgeseqobject.c,
	  interfaces/python/graphobject.[ch],
	  interfaces/python/igraphmodule.c,
	  interfaces/python/test.py,
	  interfaces/python/vertexobject.c,
	  interfaces/python/vertexseqobject.c : new attribute interface,
	  partial implementation

2006-05-14  Gabor Csardi  <csardi@kzoo.edu>

	* src/foreign.c (igraph_write_graph_lgl, igraph_write_graph_edgelist) :
	moved declaration to beginning of the block, works with older gcc

	* src/foreign-pajek-parser.y : added some semicolons to be compatible
	with older bison versions
	
2006-05-12  Gabor Csardi  <csardi@kzoo.edu>

	* src/vector.c (igraph_vector_get_interval) : added

	* src/matrix.c (igraph_matrix_get_col) : added
	
	* src/measure_dynamics.c (igraph_measure_dynamics_d_d) :
	completely rewritten, works fine now

2006-05-06  Gabor Csardi  <csardi@kzoo.edu>

	* src/measure_dynamics.c (igraph_measure_dynamics_d_d)
	(igraph_measure_dynamics_d_d_st) : added

2006-05-06  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/iterators.c (igraph_i_eit_create_allfromto) :
	iterator must be of VECTOR type instead of VECTORPTR

2006-05-05  Gabor Csardi  <csardi@kzoo.edu>

	* src/igraph_trie.c (igraph_trie_getkeys) : added

	* src/attributes.h (igraph_attribute_type_t)
	(igraph_i_attribute_record_t, igraph_attribute_elemtype_t) : added
	* src/attributes.c (igraph_i_attribute_add_vertices)